Fix password visibility toggle

--- a/app/assets/stylesheets/_new_user.scss
+++ b/app/assets/stylesheets/_new_user.scss
@@ -2,7 +2,7 @@
   .password-visibility-toggle {
     float: right;
     margin-right: 10px;
-    margin-top: -58px;
+    margin-top: -52px;
     position: relative;
     z-index: 2;
     color: var(--g500);
